--- a/Cibercomerciante/Compradores/templates/Perfil_compradores_pedidos.html
+++ b/Cibercomerciante/Compradores/templates/Perfil_compradores_pedidos.html
@@ -2,11 +2,11 @@
 	<head>
 		<title>Perfil Vendedores</title>
 
-		<script type="text/javascript" src="js/jquery-1.8.3.js"></script>
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-		<link rel="stylesheet" type="text/css" href="font-awesome/css/font-awesome.css">
-		<link type="text/css" rel="stylesheet" href="iconset/css/fontello.css" />
-		<script type="text/javascript" src="js/bootstrap.js"></script>
+		<script type="text/javascript" src="/static/js/jquery-1.8.3.js"></script>
+		<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="/static/font-awesome/css/font-awesome.css">
+		<link type="text/css" rel="stylesheet" href="/static/iconset/css/fontello.css" />
+		<script type="text/javascript" src="/static/js/bootstrap.js"></script>
 		<style type="text/css"></style>
 	</head>
 	<body>
@@ -35,16 +35,16 @@
 		<!--lista izquierda de menu de opciones-->
 				<ul class="nav nav-tabs">
 				    <li class="active">
-				    	<a href="#Pedidos" data-toggle="tab">Pedidos</a>
+				    	<a href="/inicioCompradorPedidos/">Pedidos</a>
 				    </li>
 		    		<li>
-		    			<a href="Perfil_compradores_inventario.html" data-toggle="tab">Inventario</a>
+		    			<a href="/inicioCompradorInventario/">Inventario</a>
 		    		</li>
 		    		<li>
-		    			<a href="Perfil_compradores_reportes.html" data-toggle="tab">Reportes</a>
+		    			<a href="/inicioCompradorReportes/">Reportes</a>
 		    		</li>
 		    		<li>
-		    			<a href="Perfil_compradores_usuarios.html" data-toggle="tab">Usuarios</a>
+		    			<a href="/inicioCompradorUsuarios/">Usuarios</a>
 		    		</li>
 				</ul>
 		<!--div que contiene los divs con el contenido de los paneles izquierdos-->
