--- a/Cibercomerciante/Vendedores/templates/Perfil_vendedores_catalogo.html
+++ b/Cibercomerciante/Vendedores/templates/Perfil_vendedores_catalogo.html
@@ -51,7 +51,55 @@
 			  <div class="tab-content">
 			    
 			    <div class="tab-pane active" id="Catalogo">
-					<h1>Catalogo</h1>
+					<div class="active item">
+						<table class="table table-hover">
+ 							<tr>
+ 								<th>
+ 									<div>
+ 										<button class="btn">Agregar Producto</button>
+ 										<button class="btn">Agregar Subcategoria</button>
+ 									</div>
+ 								</th>
+ 								<th></th>
+ 								<th></th>
+ 								<th></th>
+ 							</tr>
+ 							<tr>
+ 								<th>
+ 									<div class="control-group">
+    									<div class="controls">
+      										<input type="text" id="producto" placeholder="Producto">
+    									</div>
+  									</div>
+ 								</th>
+ 								<th>
+ 									<select name="categoria" id="select" class="controls">
+										<option value="Categorias" selected>Categorias</option>
+									</select>
+ 								</th>
+ 								<th>
+ 									<select name="subcategoria" id="select" class="controls">
+										<option value="subcategorias" selected>Subcategorias</option>
+									</select>
+ 								</th>
+ 								<th>Acciones</th>
+ 							</tr>
+ 							<tr>
+ 								<td>Producto 1</td>
+ 								<td>Categoria 1</td>
+ 								<td>Subcategoria 1</td>
+ 								<td>
+ 									<div>
+ 										<a href="#"><i class="icon-user" id="ic2"></i></a>
+ 										<a href="#"><i class="icon-pencil" id="ic2"></i></a>
+ 										<a href="#"><i class="icon-cancel-circled" id="ic2"></i></a>
+ 									</div>
+ 									
+ 								</td>
+ 								
+ 							</tr>
+						</table>
+					</div>
 			    </div>
 			    <div class="tab-pane" id="Pedidos">
 			      	
