Listar usuarios SOLAMENTE DE LA EMPRESA DEL ADMINISTRADOR LOGUEADO, agregar usuarios con correspondientes permisos, adminsitrador y pertenecer a varios grupos de permisos, eliminar usuario por modal dinamico mediante seguridad POST

--- a/Cibercomerciante/Vendedores/templates/BaseVendedores.html
+++ b/Cibercomerciante/Vendedores/templates/BaseVendedores.html
@@ -7,7 +7,8 @@
 		<link rel="stylesheet" type="text/css" href="/static/font-awesome/css/font-awesome.css">
 		<link type="text/css" rel="stylesheet" href="/static/iconset/css/fontello.css" />
 		<script type="text/javascript" src="/static/js/bootstrap.js"></script>
-		<style type="text/css"></style>
+		<script type="text/javascript" src="/static/js/funciones.js"></script>
+
 	</head>
 	<body>
 		<!--Encabezado de la pagina-->
