--- a/Cibercomerciante/Vendedores/templates/Agregar_producto.html
+++ b/Cibercomerciante/Vendedores/templates/Agregar_producto.html
@@ -14,35 +14,35 @@
 			<div class="control-group">
 				<label class="control-label" for="nombre_producto">Nombre Producto</label>
 				<div class="controls">
-					<input  type="text" name='nombre_producto' id="name_product" placeholder="Nombre Producto"></input>
+					<input  type="text" name='nombre_producto' id="name_product" placeholder="Nombre Producto" required></input>
 				</div>
 			</div>
 
 			<div class="control-group">
 				<label class="control-label" for="presentacion">Presentacion</label>
 				<div class="controls">
-					<input  type="text" name='presentacion' id="presentacion" placeholder="presentacion"></input>
+					<input  type="text" name='presentacion' id="presentacion" placeholder="presentacion" required></input>
 				</div>
 			</div>
 
 			<div class="control-group">
 				<label class="control-label" for="precio_compra">Precio de compra</label>
 				<div class="controls">
-					<input  type="text" name='precio_compra' id="precio_compra" placeholder="Precio de compra"></input>
+					<input  type="number" maxlength="8" name='precio_compra' id="precio_compra" placeholder="Precio de compra" required></input>
 				</div>
 			</div>
 
 			<div class="control-group">
 				<label class="control-label" for="precio_venta">Precio de venta</label>
 				<div class="controls">
-					<input  type="text" name='precio_venta' id="precio_venta" placeholder="Precio de venta"></input>
+					<input  type="number" maxlength="8" name='precio_venta' id="precio_venta" placeholder="Precio de venta" required></input>
 				</div>
 			</div>
 
 			<div class="control-group">
 				<label class="control-label">IVA</label>
 				<div class="controls">
-					<select  name="iva" id="select_iva">
+					<select  name="iva" id="select_iva" required>
 						{% for i in tipoIVA %}
 						<option value="{{i.pk}}" selected>{{i.porcentaje}}</option>
 						{% endfor %}
@@ -53,21 +53,21 @@
 			<div class="control-group">
 				<label class="control-label" for="descuento">Descuento</label>
 				<div class="controls">
-					<input  type="text" name='descuento' id="descuento" placeholder="Descuento"></input>
+					<input  type="number" name='descuento' id="descuento" placeholder="Descuento" required></input>
 				</div>
 			</div>	
 
 			<div class="control-group">
 				<label class="control-label">Foto</label>
 				<div class="controls">
-					<input type="file" name="foto" id="adjuntar_archivos"></input>
+					<input type="file" name="foto" id="adjuntar_archivos" required></input>
 				</div>
 			</div>			
 
 			<div class="control-group">
 				<label class="control-label">Categoria</label>
 				<div class="controls">
-					<select  name="categoria" id="categoria" required>
+					<select  name="categoria" id="categoria">
 						<option value="0">Seleccione Categoria</option>
 						{{% for i in categorias %}
 						<option value="{{i.pk}}">{{i}}</option>
@@ -81,7 +81,7 @@
 				<label class="control-label">Subcategoria</label>
 				<div class="controls">
 					<select  name="subcategoria" id="select_subcategoria">
-						<option value="0" selected>Seleccione subcategoria</option>
+						<option value="0" selected required>Seleccione subcategoria</option>
 					</select>
 				</div>
 			</div>
@@ -89,14 +89,14 @@
 			<div class="control-group">
 				<label class="control-label">Descripcion</label>
 				<div class="controls">
-					<textarea maxlength="50" name="descripcion" id="descripcion" rows="5" cols="50"></textarea>
+					<textarea maxlength="50" name="descripcion" id="descripcion" rows="5" cols="50" required></textarea>
 				</div>
 			</div>
 			
 			<div class="control-group">
 				<div class="controls">
 					<button type="submit"class="btn" id="boton_guardar">Agregar</button>
-					<a href="/inicioVendedorCatalogo/" class="btn">Volver</a>
+					<a href="javascript:history.back()" class="btn">Volver</a>
 
 				</div>		
 			</div>
