--- a/Cibercomerciante/Vendedores/templates/Agregar_subcategoria.html
+++ b/Cibercomerciante/Vendedores/templates/Agregar_subcategoria.html
@@ -25,14 +25,14 @@
 			<div class="control-group">
 				<label class="control-label" for="nombre_subcategoria">Nombre subcategoria</label>
 				<div class="controls">
-					<input  type="text" name='nombre_subcategoria' id="nombre_subcategoria" placeholder="Nombre subcategoria"></input>
+					<input  type="text" name='nombre_subcategoria' id="nombre_subcategoria" placeholder="Nombre subcategoria" required></input>
 				</div>
 			</div>
 			
 			<div class="control-group">
 				<div class="controls">
 					<button type="submit"class="btn" id="boton_guardar">Agregar</button>
-					<a href="/inicioVendedorCatalogo/" class="btn">Volver</a>
+					<a href="javascript:history.back()" class="btn">Volver</a>
 
 				</div>		
 			</div>
