--- a/Cibercomerciante/Vendedores/templates/Perfil_vendedores_usuarios.html
+++ b/Cibercomerciante/Vendedores/templates/Perfil_vendedores_usuarios.html
@@ -6,11 +6,10 @@
 {% block usuarioClase %}class="tab-pane active{% endblock %}
 {% block usuario %}
 
-<h1> Usuario</h1>
 <table class="table table-hover">
 	<tr>
 		<th>
-			<input  type="text" name='buscar' id="buscar" placeholder="buscar"></input>
+			<input  type="text" name='buscar' id="buscar" placeholder="buscar" style="height:30px"></input>
 			<i class="icon-search"></i>
 			
 		</th>
