--- a/Cibercomerciante/static/css/bootstrap.css
+++ b/Cibercomerciante/static/css/bootstrap.css
@@ -14,13 +14,12 @@
 }
 
 .login{
-  margin-right: 15px;
+  margin-left: 130px;
   margin-top: 10px;
   margin-bottom: 1px;
 }
 
 .login2{
-  margin-right: 15px;
   margin-top: 20px;
   margin-bottom: 1px;
 }
@@ -1121,7 +1120,7 @@ input[type="tel"],
 input[type="color"],
 .uneditable-input {
   display: inline-block;
-  height: 20px;
+  height: 30px;
   padding: 4px 6px;
   margin-bottom: 10px;
   font-size: 14px;
