--- a/Cibercomerciante/Vendedores/templates/Perfil_vendedores_catalogo.html
+++ b/Cibercomerciante/Vendedores/templates/Perfil_vendedores_catalogo.html
@@ -5,9 +5,6 @@
 
 {% block catalogoClase %}class="tab-pane active{% endblock %}
 {% block catalogo %}
-
-<h1> Catalogo </h1>
-
 <table class="table table-hover">
 	<tr>
 		<th>
@@ -24,7 +21,7 @@
 		<th>
 			<div class="control-group">
 				<div class="controls">
-					<input type="text" id="producto" placeholder="Producto">
+					<input type="text" id="producto" placeholder="Producto" style="height:30px">
 				</div>
 			</div>
 		</th>
@@ -44,22 +41,101 @@
 		</th>
 		<th>Acciones</th>
 	</tr>
-	{% for i in productos %}
-	<tr> 
+	
+
+{% for i in products %}
+<tr> 
 		<td>{{i.nombre_producto}}</td>
-		<td>{{i.categoria.cat_producto}}</td>
+		<td>{{i.categoria.cat_producto.nombre_categoria}}</td>
 		<td>{{i.categoria}}</td>
 		<td>
 			<div>
 				<a href="/visualizarProducto/{{i.pk}}"><i class="icon-user" id="ic2"></i></a>
 				<a href="/modificarProductoformulario/{{i.pk}}"><i class="icon-pencil" id="ic2"></i></a>
-				<a href="#"><i class="icon-cancel-circled" id="ic2"></i></a>
+				<a  data-toggle="modal" data-target="#myModal" nombre="{{i.nombre_producto}}" subcategoria="{{i.categoria}}" precioCompra="{{i.costo}}" PrecioVenta="{{i.costo_venta}}" descuento="{{i.descuento}}" iva="{{i.iva.porcentaje}}" descripcion="{{i.descripcion}}" imagen="{{i.imagen.url}}" presentacion="{{i.presentacion}}" empresa="{{i.empresa}}" producto="{{i.pk}}" class="eliminar_productos" ><i class="icon-cancel-circled" ></i></a>
 			</div>
 			
 		</td>
 		
 	</tr>
-	{% endfor %}
+{% endfor %}
 </table>
+
+<div class="pagination">
+    <span class="step-links">
+        {% if products.has_previous %}
+            <a href="?page={{ products.previous_page_number }}">Anterior</a>
+        {% endif %}
+
+        <span class="current">
+            Pagina {{ products.number }} de {{ products.paginator.num_pages }}.
+        </span>
+
+        {% if products.has_next %}
+            <a href="?page={{ products.next_page_number }}">Siguiente</a>
+        {% endif %}
+    </span>
+</div>
+<!-- Modal Eliminar -->
+
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<h4 class="modal-title" id="myModalLabel">Eliminar Producto</h4>
+			</div>
+			<div class="modal-body">
+				<form class="form-horizontal" method="POST" action="/eliminarProducto/">	
+					{% csrf_token %}
+					<div class="span4 well">
+						<input type="text" id="pk_eliminar" name="pk_eliminar" style="display:none;"></input>
+
+						<img src="{{d.imagen.url}}" width=150 height=150 border=5 vspace=10> 
+						<p>
+							<strong>Nombre Producto</strong>
+							<div id="nombre_eliminar"></div>
+						</p>
+						<p>
+							<strong>Subcategoria</strong>
+							<div id="subcategoria_eliminar"></div>
+						</p>
+						<p >
+							<strong>Presentacion</strong>
+							<div id="presentacion_eliminar"></div>
+						</p>
+						<p>
+							<strong>Precio Compra</strong>
+							<div id="precioCompra_eliminar"></div>
+						</p>
+						<p>
+							<strong>Precio Venta</strong>
+							<div id="precioVenta_eliminar"></div>
+						</p>
+						<p >
+							<strong>Descuento</strong>
+							<div id="descuento_eliminar"></div>
+						</p>
+						<p >
+							<strong>IVA</strong>
+							<div id="iva_eliminar"></div>
+						</p>
+						
+						<p >
+							<strong>Descripcion</strong>
+							<div id="descripcion_eliminar"></div>
+						</p>
+					</div>
+
+			</div>
+			<div class="modal-footer">
+				<a  class="btn btn-default" data-dismiss="modal">Cancelar</a>
+				<button type="submit" class="btn btn-danger">Eliminar producto</button>
+				</form>
+
+			</div>
+		</div>
+	</div>
+</div>
 
 {% endblock %}
